excersize complete
has to be ran from GameEngine pom instead